added html changes

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <button class="btnStartQuiz">Start Quiz</button>
     </div>
     
-    <div class="placeAndScore hidden">
+    <!-- <div class="placeAndScore hidden">
         <div id="placeInQuiz">Question 1 out of 10</div>
         <div id="scoreInQuiz">Score: 0/10</div>
-    </div>
+    </div> -->
 
     <form id="quizContent" class="hidden">
 
